--- a/FlameCsv.Core/FlameCsv.Core.csproj
+++ b/FlameCsv.Core/FlameCsv.Core.csproj
@@ -15,8 +15,9 @@
     <PackageReference Include="FastExpressionCompiler" Version="3.3.3" />
     <PackageReference Include="System.IO.Pipelines" Version="6.0.3" />
   </ItemGroup>
-  
-  <ItemGroup>
+
+  <!--Can be enabled intermittently-->
+  <ItemGroup Condition="false">
     <PackageReference Include="ErrorProne.NET.Structs" Version="0.4.0-beta.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
