--- a/FlameCsv.Benchmark/FlameCsv.Benchmark.csproj
+++ b/FlameCsv.Benchmark/FlameCsv.Benchmark.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <NoWarn>CA1822</NoWarn>
+    <NoWarn>CA1822;CS1591</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
