chore: force crlf to generated files
lf breaks newlines with VS on windows

--- a/.editorconfig
+++ b/.editorconfig
@@ -197,3 +197,6 @@ dotnet_style_qualification_for_field = false:silent
 dotnet_style_qualification_for_property = false:silent
 dotnet_style_qualification_for_method = false:silent
 dotnet_style_qualification_for_event = false:silent
+
+[*.Generated.*]
+end_of_line = crlf
