chore: add missing documentation

--- a/FlameCsv.Core/FlameCsv.Core.csproj
+++ b/FlameCsv.Core/FlameCsv.Core.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <Version>0.0.1</Version>
     <RootNamespace>FlameCsv</RootNamespace>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
