refactor: delete unused code, simplify expr compile

--- a/FlameCsv.Core/FlameCsv.Core.csproj
+++ b/FlameCsv.Core/FlameCsv.Core.csproj
@@ -4,6 +4,7 @@
     <Version>0.0.1</Version>
     <RootNamespace>FlameCsv</RootNamespace>
     <GenerateDocumentationFile>false</GenerateDocumentationFile>
+    <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
   </PropertyGroup>
 
   <ItemGroup>
