--- a/FlameCsv.Core/FlameCsv.Core.csproj
+++ b/FlameCsv.Core/FlameCsv.Core.csproj
@@ -8,6 +8,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="Runtime\CsvReader.Generated.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>CsvReader.Generated.tt</DependentUpon>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="CommunityToolkit.Diagnostics" Version="8.1.0" />
     <PackageReference Include="CommunityToolkit.HighPerformance" Version="8.1.0" />
     <PackageReference Include="FastExpressionCompiler" Version="3.3.4" />
@@ -23,6 +31,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Runtime\CsvReader.Generated.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>CsvReader.Generated.cs</LastGenOutput>
+    </None>
     <None Update="Runtime\Materializer.Generated.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>Materializer.Generated.cs</LastGenOutput>
@@ -30,6 +42,16 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Runtime\CsvReader.Generated.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>CsvReader.Generated.tt</DependentUpon>
+    </Compile>
+    <Compile Update="Runtime\CsvReader.Inline.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>CsvReader.Inline.tt</DependentUpon>
+    </Compile>
     <Compile Update="Runtime\Materializer.Generated.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
