--- a/FlameCsv.Core/FlameCsv.Core.csproj
+++ b/FlameCsv.Core/FlameCsv.Core.csproj
@@ -13,6 +13,11 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>CsvReader.Generated.tt</DependentUpon>
     </None>
+    <None Include="Runtime\WriteCallback.Generated.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>WriteCallback.Generated.tt</DependentUpon>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
@@ -39,6 +44,10 @@
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>Materializer.Generated.cs</LastGenOutput>
     </None>
+    <None Update="Runtime\WriteCallback.Generated.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>WriteCallback.Generated.cs</LastGenOutput>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
@@ -56,6 +65,11 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Materializer.Generated.tt</DependentUpon>
+    </Compile>
+    <Compile Update="Runtime\WriteCallback.Generated.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>WriteCallback.Generated.tt</DependentUpon>
     </Compile>
   </ItemGroup>
 
