--- a/FlameCsv.Core/FlameCsv.Core.csproj
+++ b/FlameCsv.Core/FlameCsv.Core.csproj
@@ -7,6 +7,9 @@
     <GenerateDocumentationFile>false</GenerateDocumentationFile>
     <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
     <AnalysisLevel>6.0-recommended</AnalysisLevel>
+
+    <!--This setting is broken for structs that use the in-modified-->
+    <NoWarn>RCS1085</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
