feat(sourcegen): add ctor and init-prop support

--- a/FlameCsv.Benchmark/FlameCsv.Benchmark.csproj
+++ b/FlameCsv.Benchmark/FlameCsv.Benchmark.csproj
@@ -12,6 +12,7 @@
   <PropertyGroup>
     <TieredCompilation>false</TieredCompilation>
     <TieredPGO>true</TieredPGO>
+    <InvariantGlobalization>true</InvariantGlobalization>
   </PropertyGroup>
 
   <ItemGroup>
