--- a/FlameCsv.Core/FlameCsv.Core.csproj
+++ b/FlameCsv.Core/FlameCsv.Core.csproj
@@ -34,6 +34,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Converters\NumberConverters.Generated.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>NumberConverters.Generated.cs</LastGenOutput>
+    </None>
     <None Update="Runtime\CsvReader.Generated.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>CsvReader.Generated.cs</LastGenOutput>
@@ -49,6 +53,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Converters\NumberConverters.Generated.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>NumberConverters.Generated.tt</DependentUpon>
+    </Compile>
     <Compile Update="Runtime\CsvReader.Generated.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
