--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,8 +1,7 @@
 <Project>
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <!--<TargetFrameworks>net6.0;net7.0</TargetFramework>-->
-    <LangVersion>11</LangVersion>
+    <TargetFramework>net8.0</TargetFramework>
+    <LangVersion>latest</LangVersion>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
