--- a/FlameCsv.Core/FlameCsv.Core.csproj
+++ b/FlameCsv.Core/FlameCsv.Core.csproj
@@ -26,8 +26,8 @@
   </ItemGroup>
 
   <!--Can be enabled intermittently-->
-  <ItemGroup Condition="false">
-    <PackageReference Include="ErrorProne.NET.Structs" Version="0.4.0-beta.1">
+  <ItemGroup Condition="true">
+    <PackageReference Include="ErrorProne.NET.Structs" Version="0.6.1-beta.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
