--- a/FlameCsv.Tests/FlameCsv.Tests.csproj
+++ b/FlameCsv.Tests/FlameCsv.Tests.csproj
@@ -21,6 +21,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Utf8StringInterpolation" Version="1.3.1" />
   </ItemGroup>
 
   <ItemGroup>
