--- a/.editorconfig
+++ b/.editorconfig
@@ -207,5 +207,7 @@ dotnet_style_qualification_for_method = false:silent
 dotnet_style_qualification_for_event = false:silent
 dotnet_style_prefer_collection_expression = when_types_exactly_match:suggestion
 
+dotnet_diagnostic.CA2007.severity = warning
+
 [*.Generated.*]
 end_of_line = crlf
