refactor: update to net9

--- a/FlameCsv.Benchmark/FlameCsv.Benchmark.csproj
+++ b/FlameCsv.Benchmark/FlameCsv.Benchmark.csproj
@@ -2,13 +2,17 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <NoWarn>CA1822;CS1591</NoWarn>
+    <NoWarn>$(NoWarn);IDE0008;IDE0011;IDE0040;CA1822;CS1591;CA2007</NoWarn>
 
     <AnalysisLevel>latest-minimum</AnalysisLevel>
     
     <!--For ETW profiler-->
     <DebugType>pdbonly</DebugType>
     <DebugSymbols>true</DebugSymbols>
+
+    <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
+    <CompilerGeneratedFilesOutputPath>$(BaseIntermediateOutputPath)Generated</CompilerGeneratedFilesOutputPath>
+
   </PropertyGroup>
 
   <PropertyGroup>
