--- a/.editorconfig
+++ b/.editorconfig
@@ -193,6 +193,8 @@ resharper_auto_property_can_be_made_get_only_global_highlighting=none
 resharper_for_can_be_converted_to_foreach_highlighting=none
 resharper_separate_local_functions_with_jump_statement_highlighting=none
 resharper_convert_to_primary_constructor_highlighting=none
+resharper_virtual_member_never_overridden_global_highlighting=none
+resharper_class_with_virtual_members_never_inherited_global_highlighting=none
 
 [*.Generated.*]
 end_of_line = crlf
