--- a/FlameCsv.Core/FlameCsv.Core.csproj
+++ b/FlameCsv.Core/FlameCsv.Core.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="CommunityToolkit.HighPerformance" Version="8.2.2" />
     <PackageReference Include="FastExpressionCompiler" Version="4.2.0" />
     <PackageReference Include="System.IO.Pipelines" Version="8.0.0" />
+    <PackageReference Include="JetBrains.Annotations" Version="2024.3.0" ReferenceOutputAssembly="false" />
   </ItemGroup>
 
   <ItemGroup>
