--- a/FlameCsv.Core/FlameCsv.Core.csproj
+++ b/FlameCsv.Core/FlameCsv.Core.csproj
@@ -3,12 +3,7 @@
   <PropertyGroup>
     <Version>0.1.0</Version>
     <RootNamespace>FlameCsv</RootNamespace>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <CodeAnalysisTreatWarningsAsErrors>true</CodeAnalysisTreatWarningsAsErrors>
     <GenerateDocumentationFile>false</GenerateDocumentationFile>
-    <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
-    <AnalysisLevel>latest</AnalysisLevel>
-    <WarningLevel></WarningLevel>
 
     <IsTrimmable>true</IsTrimmable>
     <IsAotCompatible>true</IsAotCompatible>
@@ -17,12 +12,19 @@
     <NoWarn>RCS1085</NoWarn>
   </PropertyGroup>
 
+  <PropertyGroup Condition="false">
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <CodeAnalysisTreatWarningsAsErrors>true</CodeAnalysisTreatWarningsAsErrors>
+    <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
+    <AnalysisLevel>latest</AnalysisLevel>
+    <DocumentationFile>bin\debug\ClassLibrary.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
-    <!--<PackageReference Include="CommunityToolkit.Diagnostics" Version="8.2.2" />-->
     <PackageReference Include="CommunityToolkit.HighPerformance" Version="8.2.2" />
     <PackageReference Include="FastExpressionCompiler" Version="4.2.0" />
     <PackageReference Include="System.IO.Pipelines" Version="8.0.0" />
-    <PackageReference Include="JetBrains.Annotations" Version="2024.3.0" ReferenceOutputAssembly="false" />
+    <PackageReference Include="JetBrains.Annotations" Version="2024.3.0" PrivateAssets="all" ReferenceOutputAssembly="false" />
   </ItemGroup>
 
   <ItemGroup>
