--- a/FlameCsv.Core/FlameCsv.Core.csproj
+++ b/FlameCsv.Core/FlameCsv.Core.csproj
@@ -4,12 +4,8 @@
     <Version>0.1.0</Version>
     <RootNamespace>FlameCsv</RootNamespace>
     <GenerateDocumentationFile>false</GenerateDocumentationFile>
-
     <IsTrimmable>true</IsTrimmable>
     <IsAotCompatible>true</IsAotCompatible>
-
-    <!--This setting is broken for structs that use the in-modifier-->
-    <NoWarn>RCS1085</NoWarn>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
@@ -95,6 +91,7 @@
     <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
   </ItemGroup>
 
+  <!-- RIDER does a better job -->
   <ItemGroup Condition="false">
     <PackageReference Include="Roslynator.Analyzers" Version="4.12.4">
       <PrivateAssets>all</PrivateAssets>
