perf: remove AggressiveOptimization usages

--- a/FlameCsv.Console/FlameCsv.Console.csproj
+++ b/FlameCsv.Console/FlameCsv.Console.csproj
@@ -28,4 +28,8 @@
     <TrimmerRootAssembly Include="FlameCsv.Core" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="JetBrains.Profiler.Api" Version="1.4.8" />
+  </ItemGroup>
+
 </Project>
