--- a/FlameCsv.Core/FlameCsv.Core.csproj
+++ b/FlameCsv.Core/FlameCsv.Core.csproj
@@ -85,6 +85,24 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>ISimdVector.Generated.tt</DependentUpon>
     </Compile>
+    <Compile Update="CsvReader.Records.cs">
+      <DependentUpon>CsvReader.cs</DependentUpon>
+    </Compile>
+    <Compile Update="CsvReader.TypeMap.cs">
+      <DependentUpon>CsvReader.cs</DependentUpon>
+    </Compile>
+    <Compile Update="CsvReader.Value.cs">
+      <DependentUpon>CsvReader.cs</DependentUpon>
+    </Compile>
+    <Compile Update="CsvOptions.Converters.cs">
+      <DependentUpon>CsvOptions.cs</DependentUpon>
+    </Compile>
+    <Compile Update="CsvOptions.Dialect.cs">
+      <DependentUpon>CsvOptions.cs</DependentUpon>
+    </Compile>
+    <Compile Update="CsvOptions.Transcoding.cs">
+      <DependentUpon>CsvOptions.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
