--- a/FlameCsv.SourceGen/FlameCsv.SourceGen.csproj
+++ b/FlameCsv.SourceGen/FlameCsv.SourceGen.csproj
@@ -10,11 +10,19 @@
     <SuppressDependenciesWhenPacking>true</SuppressDependenciesWhenPacking>
     <IncludeSymbols>false</IncludeSymbols>
     <DevelopmentDependency>true</DevelopmentDependency>
+
+    <DefineConstants>SOURCE_GENERATOR</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.11.0" PrivateAssets="all" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.12.0" PrivateAssets="all" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Include="..\FlameCsv.Core\Binding\CsvBindingScope.cs">
+      <Link>CsvBindingScope.cs</Link>
+    </Compile>
   </ItemGroup>
 
 </Project>
