refactor(sourcegen): add support for omitting CompilationProvider

--- a/FlameCsv.SourceGen.Tests/FlameCsv.SourceGen.Tests.csproj
+++ b/FlameCsv.SourceGen.Tests/FlameCsv.SourceGen.Tests.csproj
@@ -5,6 +5,8 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <IsPackable>false</IsPackable>
+
+<!--        <DefineConstants>USE_COMPILATION</DefineConstants>-->
     </PropertyGroup>
 
     <ItemGroup>
