refactor(sourcegen): use IndentedTextWriter

--- a/FlameCsv.SourceGen.Tests/FlameCsv.SourceGen.Tests.csproj
+++ b/FlameCsv.SourceGen.Tests/FlameCsv.SourceGen.Tests.csproj
@@ -6,7 +6,7 @@
         <Nullable>enable</Nullable>
         <IsPackable>false</IsPackable>
 
-<!--        <DefineConstants>USE_COMPILATION</DefineConstants>-->
+        <DefineConstants>USE_COMPILATION</DefineConstants>
     </PropertyGroup>
 
     <ItemGroup>
