--- a/FlameCsv.SourceGen/FlameCsv.SourceGen.csproj
+++ b/FlameCsv.SourceGen/FlameCsv.SourceGen.csproj
@@ -11,7 +11,7 @@
     <IncludeSymbols>false</IncludeSymbols>
     <DevelopmentDependency>true</DevelopmentDependency>
 
-<!--    <DefineConstants>USE_COMPILATION</DefineConstants>-->
+    <DefineConstants>USE_COMPILATION</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup>
