chore(core): check utf8 exact char count before array pool

--- a/FlameCsv.Core/FlameCsv.Core.csproj
+++ b/FlameCsv.Core/FlameCsv.Core.csproj
@@ -116,6 +116,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>CsvWriter.Generated.cs.tt</DependentUpon>
     </Compile>
+    <Compile Update="CsvOptions.Aot.cs">
+      <DependentUpon>CsvOptions.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
