feat: complete attribute configuration revamp

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -5,6 +5,6 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
-<!--    <DefineConstants>SOURCEGEN_USE_COMPILATION</DefineConstants>-->
+    <DefineConstants>SOURCEGEN_USE_COMPILATION</DefineConstants>
   </PropertyGroup>
 </Project>
