doc: update docs

--- a/docs/docs/toc.yml
+++ b/docs/docs/toc.yml
@@ -2,3 +2,9 @@
   href: introduction.md
 - name: Getting Started
   href: getting-started.md
+- name: Examples
+  href: examples.md
+- name: Configuration
+  href: configuration.md
+- name: Attributes
+  href: attributes.md
