--- a/docs/filterConfig.yml
+++ b/docs/filterConfig.yml
@@ -7,6 +7,9 @@ apiRules:
               uidRegex: ^System\.ValueType
               type: Type
       - exclude:
+              uidRegex: ^System\.Exception$
+              type: Type
+      - exclude:
               uidRegex: ^System\.Attribute
               type: Member
 attributeRules:
