doc: add architecture and sourcegen articles
auto-hide long attribute strings

--- a/docs/docs/toc.yml
+++ b/docs/docs/toc.yml
@@ -6,3 +6,7 @@
   href: configuration.md
 - name: Attributes
   href: attributes.md
+- name: Source Generator
+  href: source-generator.md
+- name: Architecture
+  href: architecture.md
