--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,10 +1,12 @@
 <Project>
-  <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
-    <LangVersion>preview</LangVersion>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <PropertyGroup>
+        <TargetFramework>net9.0</TargetFramework>
+        <LangVersion>preview</LangVersion>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
 
-    <DefineConstants>SOURCEGEN_USE_COMPILATION</DefineConstants>
-  </PropertyGroup>
+        <DefineConstants>
+            SOURCEGEN_USE_COMPILATION
+        </DefineConstants>
+    </PropertyGroup>
 </Project>
