--- a/FlameCsv.Core/FlameCsv.Core.csproj
+++ b/FlameCsv.Core/FlameCsv.Core.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <TargetFramework>net9.0</TargetFramework>
     <Version>0.1.0</Version>
     <RootNamespace>FlameCsv</RootNamespace>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
